--- a/manifest.json
+++ b/manifest.json
@@ -2,7 +2,7 @@
   "name": "Smart Move Pro",
   "short_name": "SmartMove",
   "description": "Asistente de ruta para choferes de colectivo.",
-  "start_url": "./smart_move_pro.html", /* Asegúrate que el nombre del HTML coincida */
+  "start_url": "./index.html",  /* Asegúrate que el nombre del HTML coincida */
   "display": "standalone",
   "background_color": "#ffffff",
   "theme_color": "#007bff",
@@ -37,7 +37,7 @@
       "src": "icons/icon-192x192.png",
       "sizes": "192x192",
       "type": "image/png",
-      "purpose": "any maskable" /* 'maskable' ayuda con íconos adaptativos en Android */
+      "purpose": "any maskable"
     },
     {
       "src": "icons/icon-384x384.png",
