--- a/manifest.json
+++ b/manifest.json
@@ -1,11 +1,11 @@
 {
   "name": "Smart Move Pro",
-  "short_name": "SmartMove",
-  "start_url": ".",
+  "short_name": "SMP",
+  "description": "Gestión de rutas y seguimiento para choferes de colectivo.",
+  "start_url": "/smart-move-pro/index.html",
   "display": "standalone",
   "background_color": "#ffffff",
-  "description": "Aplicación para choferes de colectivos",
-  "theme_color": "#4A90E2",
+  "theme_color": "#3f51b5",
   "icons": [
     {
       "src": "icons/icon-192x192.png",
