--- a/manifest.json
+++ b/manifest.json
@@ -1,21 +1,23 @@
+// manifest.json
 {
-  "name": "Smart Move Pro",
-  "short_name": "SMP",
-  "description": "Gestión de rutas y seguimiento para choferes de colectivo.",
-  "start_url": "/smart-move-pro/index.html",
-  "display": "standalone",
-  "background_color": "#ffffff",
-  "theme_color": "#3f51b5",
-  "icons": [
-    {
-      "src": "icons/icon-192x192.png",
-      "sizes": "192x192",
-      "type": "image/png"
-    },
-    {
-      "src": "icons/icon-512x512.png",
-      "sizes": "512x512",
-      "type": "image/png"
-    }
-  ]
+    "name": "Smart Move Pro",
+    "short_name": "SmartMove",
+    "description": "Aplicación para choferes de colectivo para gestión de rutas y seguimiento.",
+    "start_url": "index.html",
+    "display": "standalone",
+    "background_color": "#ffffff",
+    "theme_color": "#4CAF50",
+    "orientation": "portrait-primary",
+    "icons": [
+        {
+            "src": "icons/icon-192x192.png",
+            "type": "image/png",
+            "sizes": "192x192"
+        },
+        {
+            "src": "icons/icon-512x512.png",
+            "type": "image/png",
+            "sizes": "512x512"
+        }
+    ]
 }
