--- a/manifest.json
+++ b/manifest.json
@@ -1,27 +1,23 @@
 {
-  "name": "Smart Move Pro",
-  "short_name": "SmartMove",
-  "description": "Gestión de rutas y seguimiento para choferes de colectivo.",
-  "start_url": "index.html",
-  "display": "standalone",
-  "background_color": "#007bff",
-  "theme_color": "#007bff",
-  "icons": [
-    {
-      "src": "icons/icon-192x192.png",
-      "sizes": "192x192",
-      "type": "image/png"
-    },
-    {
-      "src": "icons/icon-512x512.png",
-      "sizes": "512x512",
-      "type": "image/png"
-    },
-    {
-      "src": "icons/maskable-icon.png",
-      "sizes": "196x196",
-      "type": "image/png",
-      "purpose": "any maskable"
-    }
-  ]
+    "name": "Smart Move Pro",
+    "short_name": "SMP",
+    "description": "App para choferes de colectivo para gestionar rutas y seguimiento.",
+    "start_url": "./index.html",
+    "display": "standalone",
+    "background_color": "#ffffff",
+    "theme_color": "#4CAF50",
+    "icons": [
+        {
+            "src": "./icons/icon-192x192.png",
+            "sizes": "192x192",
+            "type": "image/png",
+            "purpose": "any maskable"
+        },
+        {
+            "src": "./icons/icon-512x512.png",
+            "sizes": "512x512",
+            "type": "image/png",
+            "purpose": "any maskable"
+        }
+    ]
 }
